# app/docs/swagger.json
@@ -14,12 +14,29 @@
                     "application/json"
                 ],
                 "summary": "Charge balance",
+                "parameters": [
+                    {
+                        "description": "Charge money",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.UserChargeMoneyDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created"
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "418": {
+                        "description": "I'm a teapot"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -37,12 +54,29 @@
                     "application/json"
                 ],
                 "summary": "Decrease user balance",
+                "parameters": [
+                    {
+                        "description": "Remove money",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.UserRemoveMoneyDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created"
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "418": {
+                        "description": "I'm a teapot"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -51,7 +85,7 @@
             }
         },
         "/api/v1/transfer": {
-            "get": {
+            "post": {
                 "description": "transfer money from one user to another",
                 "consumes": [
                     "application/json"
@@ -60,12 +94,29 @@
                     "application/json"
                 ],
                 "summary": "Transfer Money",
+                "parameters": [
+                    {
+                        "description": "Remove money",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.TransferMoneyDTO"
+                        }
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "418": {
+                        "description": "I'm a teapot"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -84,19 +135,38 @@
                     "201": {
                         "description": "Created"
                     },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "418": {
+                        "description": "I'm a teapot"
+                    },
                     "500": {
                         "description": "Internal Server Error"
                     }
                 }
             }
         },
-        "/users/:id": {
+        "/users/{id}": {
             "get": {
-                "description": "Get user by id",
+                "description": "Get user balance by id",
                 "produces": [
+                    "application/json",
                     "application/json"
                 ],
-                "summary": "Get user",
+                "summary": "Get user balance",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "User id",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "201": {
                         "description": "Created"
@@ -104,9 +174,53 @@
                     "400": {
                         "description": "Bad Request"
                     },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "418": {
+                        "description": "I'm a teapot"
+                    },
                     "500": {
                         "description": "Internal Server Error"
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "user.TransferMoneyDTO": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "from": {
+                    "type": "integer"
+                },
+                "to": {
+                    "type": "integer"
+                }
+            }
+        },
+        "user.UserChargeMoneyDTO": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "user.UserRemoveMoneyDTO": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
                 }
             }
         }
